# comfyui-prompt-skills

./: .gitignore  AGENTS.md  Makefile  README.md  opencode.json  sync.sh
agent-docs/: comfyui.md  comfyui_v2.md  opencode_api.md  设计.md  (+1 more)
custom_nodes/comfyui-prompt-skills/: Makefile  README.md  __init__.py  install.sh  output.json  pyproject.toml  run_standalone.py
custom_nodes/comfyui-prompt-skills/backend/: __init__.py
custom_nodes/comfyui-prompt-skills/backend/core/: __init__.py  debug_logger.py  opencode_client.py  output_formatter.py  session_manager.py  skill_registry.py
custom_nodes/comfyui-prompt-skills/backend/logic/: __init__.py  app.py  routes.py  socket_handlers.py
custom_nodes/comfyui-prompt-skills/data/: z_styles_db.json
custom_nodes/comfyui-prompt-skills/js/: extension.js
custom_nodes/comfyui-prompt-skills/nodes/: __init__.py  container_node.py  show_text_node.py
custom_nodes/comfyui-prompt-skills/skills/z-hanfu/: SKILL.md
custom_nodes/comfyui-prompt-skills/skills/z-manga/: SKILL.md
custom_nodes/comfyui-prompt-skills/skills/z-photo/: SKILL.md
custom_nodes/comfyui-prompt-skills/standalone/: index.html
custom_nodes/comfyui-prompt-skills/tests/: __init__.py  conftest.py  test_integration.py  test_integration_bug_repro.py  test_session_manager.py  test_socket_handlers.py  test_standalone_e2e.py
custom_nodes/comfyui-prompt-skills/web/: package.json  vite.config.js
custom_nodes/comfyui-prompt-skills/web/src/: App.vue  main.js
custom_nodes/comfyui-prompt-skills/web/src/components/: ChatPanel.vue  DebugPanel.vue  SkillSelector.vue
(+16 files in other folders)
