[project]
name = "comfyui-prompt-skills"
version = "2.0.0"
description = "ComfyUI智能提示词生成插件 - 三层解耦架构"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "eventlet>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "nodes*"]
exclude = ["web*", "js*", "data*", "skills*", "tests*"]

[tool.comfy]
PublisherId = "prompt_skills"
DisplayName = "Prompt Skills"
Icon = ""
requires-comfyui = ">=0.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
